--- a/src/app/components/userlist/userlist.component.html
+++ b/src/app/components/userlist/userlist.component.html
@@ -23,7 +23,7 @@
                         <td>{{user.password}}</td>
                         <td>
                             <button class="btn btn-primary" [routerLink]="['/updateUser',user.userId]">Edit</button>
-                            <button class="btn btn-warning ml-2">Delete</button>
+                            <button class="btn btn-warning ml-2" (click)="currentdeleteUser(user.userId)">Delete</button>
                         </td>
                     </tr>
 
