--- a/src/app/components/userregister/userregister.component.html
+++ b/src/app/components/userregister/userregister.component.html
@@ -6,9 +6,8 @@
                 <label for="fullname" class="form-lable">Enter Fullname </label>
                 <input type="text" class="form-control" formControlName="fullname"
                     placeholder="Enter fullname">
-                    
+                <!-- forms as a component api   -->
             </div>
-           
             <div class="form-group col-12">
                 <label for="email" class="form-lable">Enter Email Id</label>
                 <input type="text" class="form-control" formControlName="email" placeholder="Enter email">
