--- a/src/app/components/userupdate/userupdate.component.html
+++ b/src/app/components/userupdate/userupdate.component.html
@@ -1,35 +1,23 @@
-<div class="card">
-    <div class="card-header">User Register</div>
-    <div class="card-body">
-        <form [formGroup]="registerForm">
-            <div class="form-group col-12">
-                <label for="fullname" class="form-lable">Enter Fullname </label>
-                <input type="text" class="form-control" formControlName="fullname"
-                    placeholder="Enter fullname">
-                    
-            </div>
-           
-            <div class="form-group col-12">
-                <label for="email" class="form-lable">Enter Email Id</label>
-                <input type="text" class="form-control" formControlName="email" placeholder="Enter email">
-            </div>
-            <div class="form-group col-12">
-                <label for="mobilenumber" class="form-lable">Enter mobilenumber </label>
-                <input type="text" class="form-control" formControlName="mobilenumber"
-                    placeholder="Enter mobilenumber">
-            </div>
-            <div class="form-group col-12">
-                <label for="password" class="form-lable">Enter password </label>
-                <input type="password" class="form-control" formControlName="password"
-                    placeholder="Enter password">
-            </div>
 
-            <div class="form-group col-12">
-                <button type="submit" class="btn btn-primary mr-3 ml-4">Update</button>
-                <button type="reset" class="btn btn-danger ml-2">Cancel</button>
+<div class="card container mt-3">
+    <div class="card-header">User List</div>
+    <div class="card-body">
+        <form [formGroup]="edituser" (ngSubmit)="updateUser()">
+            <div class="form-group" >
+              <label>Enter Name</label>
+              <input type="text" class="form-control" placeholder="Enter name" formControlName="fullname">
+              <label>Enter email</label>
+              <input type="email" class="form-control" placeholder="Enter email" formControlName="email">
+              <label>Enter mobilenumber</label>
+              <input type="text" class="form-control" placeholder="Enter address" formControlName="mobilenumber">
+              <label>Enter password</label>
+              <input type="text" class="form-control" placeholder="Enter address" formControlName="password">
+              
             </div>
-        </form>
+            <button type="submit" class="btn btn-primary">Update</button>
+            <button type="button" class="btn btn-primary" (click)="copyUser()">copyUser</button>
+          </form>
     </div>
-   
-  </div>
+</div>
+
 
